interior page setup

--- a/lib/client/app/application/pages/announcement/partials/announcement-template.html
+++ b/lib/client/app/application/pages/announcement/partials/announcement-template.html
@@ -1,4 +1,4 @@
-<section class="interior-page" flex="100" layout="column" layout-align="start center" class="{{base_hue_lightest.name}}">
+<section flex="100" layout="column" layout-align="start center" class="{{base_hue_lightest.name}}">
 
 	<!-- header -->
 	<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
@@ -12,7 +12,7 @@
         <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
     </md-button>
 
-	<div layout="row" layout-wrap style="width: 100%;">
+	<div class="interior-page" layout="row" layout-wrap style="width: 100%;">
 
 	    	<!-- tab Panel -->
     		<!-- panel title -->
