adding info page

--- a/lib/client/app/application/pages/announcement/partials/announcement-template.html
+++ b/lib/client/app/application/pages/announcement/partials/announcement-template.html
@@ -17,7 +17,7 @@
 	    	<!-- tab Panel -->
     		<!-- panel title -->
 	    	<div flex="100" style="padding-top: 16px;">
-		        <h1 class="announcement base-hdst--text" style="margin-top: 8px; font-size: 36px;">{{announcementPage.data.title}}</h1>
+		        <h1 class="type heading base-hdst--text" style="margin-top: 8px;">{{announcementPage.data.title}}</h1>
 		    </div>
 		    <!-- panel title -->
 
