--- a/lib/client/app/stylesheets/text.css
+++ b/lib/client/app/stylesheets/text.css
@@ -7,10 +7,12 @@ a {text-decoration: none;}
 
 .type.simulated {font-size: 56px;}
 .type.heading {font-size: 32px;}
+.type.heading-2 {font-size: 24px;}
 .type.heading.footer {font-size: 18px;}
-@media screen and (max-width: 840px) {
+@media screen and (max-width: 960px) {
     .type.simulated {font-size: 42px;}
     .type.heading {font-size: 24px;}
+    .type.heading-2 {font-size: 16px;}
     .type.heading.footer {font-size: 16px;}
 }
 
