--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -5,87 +5,89 @@
     right: 0; top: 400px; padding:0; margin: 0!important; opacity: 0.1;
 }
 </style>
-<section flex="100" layout="column" layout-align="start center" style="background: {{base_hue_lightest.value}}">
-	
-	<!-- header -->
-	<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
-		<div ng-include src="'application/partials/header.html'"></div>
-	</md-subheader>
-	<!-- header -->
+<md-content class="page" style="height: {{window_height}}px">
+	<section flex="100" layout="column" layout-align="start center" style="background: {{base_hue_lightest.value}}">
+		
+		<!-- header -->
+		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
+			<div ng-include src="'application/partials/header.html'"></div>
+		</md-subheader>
+		<!-- header -->
 
-	<div ng-include src="'application/partials/navigation-menu.html'"></div>
+		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-	<md-button ng-if="user" ng-click="edit(infoPage.settings.configs, infoPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
-        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
-    </md-button>
+		<md-button ng-if="user" ng-click="edit(infoPage.settings.configs, infoPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
+	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
+	    </md-button>
 
 
-	<!-- Shrinking Page Title -->
-	<div ng-attr-style="background-color: {{primary_hue_normal.value}}; opacity: .9; height: 200px; line-height: 200px; width: 100%; position: relative; top: 0; z-index: 21; overflow: hidden;">
-		<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
-		    <div class="interior-page-background"></div>
-		</div>
-		<h2 class="type heading {{base_hue_text__lightest.name}}">{{infoPage.data.title}}</h2>
-	</div>
-	<!-- Shrinking Page Title -->
-	
-	<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
-
-			<!-- tab Panel Component -->
-		    <div flex="100" flex-sm="100" flex-gt-sm="66" style="z-index: 3;" layout-padding>
-
-		    	<!-- tab Panel -->
-
-	    		<!-- panel title -->
-		    	<div style="padding-top: 16px;">
-			        <h1 class="type heading-2 base-hdst--text" style="margin-top: 8px;">{{infoPage.data.title}}</h1>
-			    </div>
-			    <!-- panel title -->
-
-			    <div flex="100" layout="row" style="padding: 0!important;">
-					<!-- panel images -->
-					<md-card flex="100" class="lightweight-card-image md-whitefrap-2dp">
-						<img ng-src="{{infoPage.data.page.foreground.images.source}}" class="md-card-image">
-					</md-card>
-					<!-- panel images -->
-				</div>
-
-		    	<br>
-		    	<br>
-		    	<div ng-repeat="content in infoPage.data.page.contents">
-		    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
-					<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
-					<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
-					<div class="mdl-grid full-width no-padding">
-						<!-- panel images -->
-						<div ng-cloak class="mdl-cell mdl-cell--12-col lightweight-card-image mdl-card mdl-shadow--2dp" ng-if="content.type == 'image'" ng-attr-style="background: url('{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}') center/cover; position: relative;">
-							<div class="mdl-card__title mdl-card--expand"></div>
-						</div>
-						<!-- panel images -->
-					</div>
-					<a ng-if="content.type == 'button'" href="{{content.data.url}}">
-                        <button style="margin-top: 8px; margin-bottom: 16px;" class="button-color-border mdl-button mdl-js-button mdl-js-ripple-effect">{{content.data.button}}</button>
-                    </a>
-		        </div>
-
-		    	<!-- tab Panel -->
-
-		    </div>
-		    <!-- tab Panel Component -->
-
-            <!-- Map Widget -->
-            <div flex="100" flex-sm="100" flex-gt-sm="33" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
-				<div layout-wrap layout="row" layout-align="start center" flex>
-					<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center" layout-padding>
-						<iframe src="https://snazzymaps.com/embed/64899" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
-					</div>
-				</div>
+		<!-- Shrinking Page Title -->
+		<div ng-attr-style="background-color: {{primary_hue_normal.value}}; opacity: .9; height: 200px; line-height: 200px; width: 100%; position: relative; top: 0; z-index: 21; overflow: hidden;">
+			<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
+			    <div class="interior-page-background"></div>
 			</div>
-            <!-- Map Widget -->
+			<h2 class="type heading {{base_hue_text__lightest.name}}">{{infoPage.data.title}}</h2>
+		</div>
+		<!-- Shrinking Page Title -->
+		
+		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
-	</div>
-</section>
+				<!-- tab Panel Component -->
+			    <div flex="100" flex-sm="100" flex-gt-sm="66" style="z-index: 3;" layout-padding>
 
-<!-- Footer -->
-<div ng-include src="'application/partials/footer.html'"></div>
-<!-- Footer -->
+			    	<!-- tab Panel -->
+
+		    		<!-- panel title -->
+			    	<div style="padding-top: 16px;">
+				        <h1 class="type heading-2 base-hdst--text" style="margin-top: 8px;">{{infoPage.data.title}}</h1>
+				    </div>
+				    <!-- panel title -->
+
+				    <div flex="100" layout="row" style="padding: 0!important;">
+						<!-- panel images -->
+						<md-card flex="100" class="lightweight-card-image md-whitefrap-2dp">
+							<img ng-src="{{infoPage.data.page.foreground.images.source}}" class="md-card-image">
+						</md-card>
+						<!-- panel images -->
+					</div>
+
+			    	<br>
+			    	<br>
+			    	<div ng-repeat="content in infoPage.data.page.contents">
+			    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
+						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
+						<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
+						<div class="mdl-grid full-width no-padding">
+							<!-- panel images -->
+							<div ng-cloak class="mdl-cell mdl-cell--12-col lightweight-card-image mdl-card mdl-shadow--2dp" ng-if="content.type == 'image'" ng-attr-style="background: url('{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}') center/cover; position: relative;">
+								<div class="mdl-card__title mdl-card--expand"></div>
+							</div>
+							<!-- panel images -->
+						</div>
+						<a ng-if="content.type == 'button'" href="{{content.data.url}}">
+	                        <button style="margin-top: 8px; margin-bottom: 16px;" class="button-color-border mdl-button mdl-js-button mdl-js-ripple-effect">{{content.data.button}}</button>
+	                    </a>
+			        </div>
+
+			    	<!-- tab Panel -->
+
+			    </div>
+			    <!-- tab Panel Component -->
+
+	            <!-- Map Widget -->
+	            <div flex="100" flex-sm="100" flex-gt-sm="33" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
+					<div layout-wrap layout="row" layout-align="start center" flex>
+						<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center" layout-padding>
+							<iframe src="https://snazzymaps.com/embed/64899" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+	            <!-- Map Widget -->
+
+		</div>
+
+		<!-- Footer -->
+		<div ng-include src="'application/partials/footer.html'"></div>
+		<!-- Footer -->
+	</section>
+</md-content>
