--- a/lib/client/app/application/landing/partials/section_3.html
+++ b/lib/client/app/application/landing/partials/section_3.html
@@ -2,7 +2,7 @@
 	<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
 		<div layout-wrap layout="row" layout-align="start center" flex>
 			<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center">
-				<iframe src="https://snazzymaps.com/embed/64899" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+				<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
