beginning to add blog posts

--- a/lib/client/app/stylesheets/lightweight.css
+++ b/lib/client/app/stylesheets/lightweight.css
@@ -11,8 +11,7 @@
 .userVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 }
 .suite-dialog > md-card-title {max-height: 100px;}
-.mediaVault .suite-dialog > md-card-title {max-height: 64px;}
-.userVault .suite-dialog > md-card-title {max-height: 64px;}
+.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, .blogVault .suite-dialog > md-card-title {max-height: 64px;}
 .dialog-curtain,
 .suite-dialog, .secondary-dialog-curtain {position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; margin:0!important;}
 /* ============================== Curtain ============================== */
