--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -9,7 +9,7 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p><
+						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
 					</md-list-item>
 					<md-list-item>
 						<a href="/"><p style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
