--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -1,6 +1,6 @@
 <style>
 .interior-page-background {
-    background: url('{{blogPage.data.page.foreground.images.source}}') no-repeat;
+    background: url('{{blogPage.data.page.background.images.source}}') no-repeat;
     background-size: cover; width: 100%!important; height: 100%; 
     right: 0; top: 400px; padding:0; margin: 0!important; opacity: 0.1;
 }
@@ -26,7 +26,7 @@
 		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Shrinking Page Title -->
-			<div flex ng-attr-style="background-color: {{primary_hue_normal.value}}; opacity: .9; height: 400px; line-height: 250px; min-width: 100%; position: relative; top: 0; overflow: hidden; text-align: center;">
+			<div flex ng-attr-style="height: 400px; line-height: 250px; min-width: 100%; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
 				    <div class="interior-page-background"></div>
 				</div>
@@ -37,13 +37,13 @@
 			<!-- tab Panel Component -->
 		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3;" layout-padding>
 
-			    <div flex="100" flex-gt-sm="75" layout="row">
-					<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1><br>
+			    <div flex="100" flex-gt-sm="75" layout="column">
+					<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1>
 					<p class="base-hdst--text" ng-bind-html="blogPage.data.subtitle"></p>
 					<p class="base-hdst--text" ng-bind-html="blogPage.data.author"></p>
 				</div>
 				<div flex="100" flex-gt-sm="25" layout="row">
-					<p class="base-hdst--text" ng-bind-html="blogPage.data.date"></p>
+					<p class="base-hdst--text">{{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
 				</div>
 
 		    	<br>
