blog page height

--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -35,7 +35,7 @@
 			<!-- Shrinking Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3;" layout-padding>
+		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3; min-height: 300px;" layout-padding>
 
 			    <div flex="100" flex-gt-sm="75" layout="column">
 					<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1>
