--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -20,15 +20,13 @@
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
-
-		
-		
 		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Shrinking Page Title -->
-			<div flex ng-attr-style="height: 400px; line-height: 250px; min-width: 100%; position: relative; top: 0; overflow: hidden; text-align: center;">
+			<div flex="100" style="height: 400px; line-height: 250px; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
-				    <div class="interior-page-background"></div>
+				    <!-- <div class="interior-page-background"></div> -->
+				    <img ng-src="blogPage.data.page.background.images.source">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
@@ -37,17 +35,19 @@
 			<!-- tab Panel Component -->
 		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3; min-height: 300px;" layout-padding>
 
-			    <div flex="100" flex-gt-sm="75" layout="column">
-					<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1>
-					<p class="base-hdst--text" ng-bind-html="blogPage.data.subtitle"></p>
-					<p class="base-hdst--text" ng-bind-html="blogPage.data.author"></p>
-				</div>
+				<md-list class="md-dense" flex="100" flex-gt-sm="75">
+                    <md-list-item class="md-3-line" flex>
+                        <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon>
+                        <div class="md-list-item-text">
+                        	<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1>
+                            <h3 style="font-size: 24px;">{{blogPage.data.subtitle}}</h3>
+                            <p>{{blogPage.data.author}}</p>
+                        </div>
+                    </md-list-item>
+                </md-list>
 				<div flex="100" flex-gt-sm="25" layout="row">
 					<p class="base-hdst--text">{{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
 				</div>
-
-		    	<br>
-		    	<br>
 		    	<div ng-repeat="content in blogPage.data.page.contents" flex="100">
 		    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
 					<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
