--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -26,7 +26,7 @@
 			<div flex="100" style="height: 400px; line-height: 250px; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
 				    <!-- <div class="interior-page-background"></div> -->
-				    <img ng-src="blogPage.data.page.background.images.source">
+				    <img ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
