--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -37,11 +37,11 @@
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="75">
                     <md-list-item class="md-3-line" flex>
-                        <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon>
+                        <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h1 class="type heading base-hdst--text" ng-bind-html="blogPage.data.title" style="margin-top: 8px;"></h1>
-                            <h3 style="font-size: 24px;">{{blogPage.data.subtitle}}</h3>
-                            <p>{{blogPage.data.author}}</p>
+                        	<h3 style="font-size: 24px;">{{blogPage.data.title}}</h3>
+                            <h3 style="font-size: 18px;">{{blogPage.data.subtitle}}</h3>
+                            <p style="font-size: 16px;">{{blogPage.data.author}}</p>
                         </div>
                     </md-list-item>
                 </md-list>
