--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -1,10 +1,3 @@
-<style>
-.interior-page-background {
-    background: url('{{blogPage.data.page.background.images.source}}') no-repeat;
-    background-size: cover; width: 100%!important; height: 100%; 
-    right: 0; top: 400px; padding:0; margin: 0!important; opacity: 0.1;
-}
-</style>
 <md-content class="page" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lightest.value}}">
 		
@@ -23,12 +16,11 @@
 		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Shrinking Page Title -->
-			<div flex="100" style="height: 400px; line-height: 250px; position: relative; top: 0; overflow: hidden; text-align: center;">
-				<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
-				    <!-- <div class="interior-page-background"></div> -->
+			<div layout="row" flex="100" style="height: 600px; line-height: 450px; position: relative; top: 0; overflow: hidden; text-align: center;">
+				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
-				<h2 style="color: {{base_hue_text__lightest.value}}" class="type simulated">{{blogPage.data.title}}</h2>
+				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative;" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
 			<!-- Shrinking Page Title -->
 
@@ -40,7 +32,7 @@
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
                         	<h3 style="font-size: 24px;">{{blogPage.data.title}}</h3>
-                            <h3 style="font-size: 18px;">{{blogPage.data.subtitle}}</h3>
+                            <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">{{blogPage.data.author}}</p>
                         </div>
                     </md-list-item>
