--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -16,11 +16,11 @@
 		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
 			<!-- Shrinking Page Title -->
-			<div layout="row" flex="100" style="height: 600px; line-height: 450px; position: relative; top: 0; overflow: hidden; text-align: center;">
+			<div layout="row" flex="100" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
-				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative;" class="type simulated">{{blogPage.data.title}}</h2>
+				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
 			<!-- Shrinking Page Title -->
 
@@ -28,7 +28,7 @@
 		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3; min-height: 300px;" layout-padding>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="75">
-                    <md-list-item class="md-3-line" flex>
+                    <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
                         	<h3 style="font-size: 24px;">{{blogPage.data.title}}</h3>
