--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -20,7 +20,7 @@
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
-				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{blogPage.data.headline}}</h2>
+				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
 			<!-- Shrinking Page Title -->
 
@@ -31,9 +31,9 @@
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 24px;">{{blogPage.data.title}}</h3>
+                        	<h3 style="font-size: 24px;">{{blogPage.data.headline}}</h3>
                             <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
-                            <p style="font-size: 16px;">{{blogPage.data.author}} {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
+                            <p style="font-size: 16px;">{{blogPage.data.author}} / {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
                         </div>
                     </md-list-item>
                 </md-list>
