--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -27,11 +27,11 @@
 			<!-- tab Panel Component -->
 		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3; min-height: 300px;" layout-padding>
 
-				<md-list class="md-dense" flex="100">
+				<md-list class="md-dense" flex="100" flex-gt-sm="75">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 24px;">{{blogPage.data.headline}}</h3>
+                        	<h3 style="font-size: 36px;">{{blogPage.data.headline}}</h3>
                             <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">{{blogPage.data.author}} / {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
                         </div>
