--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -25,7 +25,7 @@
 			<!-- Shrinking Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" style="z-index: 3; min-height: 300px;" layout-padding>
+		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="75">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
