--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -31,7 +31,7 @@
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 36px;">{{blogPage.data.headline}}</h3>
+                        	<h3 style="font-size: 36px; white-space: pre-wrap;">{{blogPage.data.headline}}</h3>
                             <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">{{blogPage.data.author}} / {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
                         </div>
