--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -25,15 +25,15 @@
 			<!-- Shrinking Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="100" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding>
+		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="70" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding>
 
-				<md-list class="md-dense" flex="100" flex-gt-sm="75">
+				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 36px; white-space: pre-wrap;">{{blogPage.data.headline}}</h3>
+                        	<h3 style="font-size: 42px; white-space: pre-wrap;">{{blogPage.data.headline}}</h3>
                             <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
-                            <p style="font-size: 16px;">{{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
+                            <p style="font-size: 16px;">By {{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
                         </div>
                     </md-list-item>
                 </md-list>
