--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -25,23 +25,23 @@
 			<!-- Shrinking Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="70" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding>
+		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="70" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
 
 				<md-list class="md-dense" flex="100" flex-gt-sm="100">
                     <md-list-item class="md-3-line" flex style="padding: 0;">
                         <!-- <md-icon class="md-avatar-icon" aria-label="View details" style="color: {{base_hue_darkest.value}};">face</md-icon> -->
                         <div class="md-list-item-text">
-                        	<h3 style="font-size: 42px; white-space: pre-wrap;">{{blogPage.data.headline}}</h3>
-                            <h3 style="font-size: 16px;">{{blogPage.data.subtitle}}</h3>
+                        	<h3 style="font-size: 42px; white-space: pre-wrap; font-weight: bold">{{blogPage.data.headline}}</h3>
+                            <h3 ng-attr-style="font-size: 16px; color: {{primary_hue_normal.value}};">{{blogPage.data.subtitle}}</h3>
                             <p style="font-size: 16px;">By {{blogPage.data.author}}  /  {{blogPage.data.date | date : "MMM d, y h:mm:ss a"}}</p>
                         </div>
                     </md-list-item>
                 </md-list>
 		    	<div ng-repeat="content in blogPage.data.page.contents" flex="100">
-		    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
+		    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
 					<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
 					<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
-					<div class="mdl-grid full-width no-padding">
+					<div style="width: 100%; padding: 0">
 						<!-- panel images -->
 							<md-card ng-cloak class="lightweight-card-image md-whiteframe-2dp" ng-if="content.type == 'image'" ng-attr-style="position: relative;">
 								<img ng-src="{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}" class="md-card-image">
