--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -15,14 +15,14 @@
 
 		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
 
-			<!-- Shrinking Page Title -->
+			<!-- Page Title -->
 			<div layout="row" flex="100" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center;">
 				<div style="width: 100%; height: 100%; position: absolute;">
 				    <img ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto;" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
-			<!-- Shrinking Page Title -->
+			<!-- =Page Title -->
 
 			<!-- tab Panel Component -->
 		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="70" layout-align="start start" style="z-index: 3; min-height: 500px;" layout-padding layout-margin>
