--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -31,7 +31,7 @@
 			</div>
 			<!-- =Page Title -->
 			
-			<div class="md-whiteframe-4dp" layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="80" layout-align="start start" ng-attr-style="margin-top: -104px; margin-left: auto; margin-right: auto; z-index: 1; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
+			<div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="80" layout-align="start start" ng-attr-style="margin-top: -104px; margin-left: auto; margin-right: auto; z-index: 1; min-height: 500px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
 
 		    	<div style="margin-bottom: 100px;">
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
