--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -31,7 +31,7 @@
 			</div>
 			<!-- =Page Title -->
 			
-			<div layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -104px; z-index: 1; min-height: 600px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
+			<div layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -104px; z-index: 1; min-height: 600px; background-color: {{base_hue_lightest.value}}; border: 1px solid rgb(224, 224, 224);" layout-padding layout-margin>
 
 		    	<div style="margin-bottom: 100px;">
 			    	<div ng-repeat="content in spotlightPage.data.page.contents">
@@ -53,7 +53,7 @@
 
 			</div>
 
-			<div layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="30" layout-align="start start" ng-attr-style="margin-top: -104px; z-index: 1; min-height: 600px; background-color: {{base_hue_lightest.value}};" layout-padding layout-margin>
+			<div layout="row" layout-wrap flex="80" flex-sm="80" flex-gt-sm="30" layout-align="start start" ng-attr-style="margin-top: -104px; z-index: 1; min-height: 600px; background-color: {{base_hue_lightest.value}}; border: 1px solid rgb(224, 224, 224);" layout-padding layout-margin>
 
 
 			</div>
